...
            modifier = Modifier.fillMaxWidth(),
            verticalAlignment = Alignment.CenterVertically
        ) {
            Checkbox(
                checked = task.isFinished,
                onCheckedChange = { onTaskUpdated(task.copy(isFinished = it)) },
                Modifier.testTag("TASK_CHECK_BOX")
            )
            Spacer(modifier = Modifier.width(4.dp))
            Text(
                text = task.name,
                style = LocalTextStyle.current.copy(textDecoration = if (task.isFinished) TextDecoration.LineThrough else TextDecoration.None)
            )
            Spacer(modifier = Modifier.weight(1f))
            IconButton(onClick = { onDeleteClicked(task) }, modifier = Modifier.testTag("DELETE_BUTTON")) {
                Icon(
                    imageVector = Icons.Outlined.Delete,
                    contentDescription = stringResource(R.string.add),
                    tint = Color.Red.copy(alpha = 0.6f)
                )
            }
...
